# Programowanie_zespolowe

./: .gitignore  Makefile  README.md  pyproject.toml
config/: local
scripts/: CREATE_DB.sql  DROP_DB.sql  postman_collection.json
src/: main.py  settings.py  utils.py
src/api/: dependencies.py  models.py  schemas.py
src/api/routes/: auth_routes.py  comapre_products.py  compare_products.py  products_routes.py  users_routes.py
src/database/: const.py  database.py  models.py  repository.py
src/database/migrations/: initial_migration.py
src/frontend/: asset-manifest.json  index.html  package.json
src/frontend/src/: App.js  AuthProvider.js  comparly_frontend_19052024.code-workspace  index.js
src/frontend/src/Components/: NavBar.css  NavBar.js  ProductSummary.css  ProductSummary.js  ProductSummaryList.css  ProductSummaryList.js  SearchPanel.css  SearchPanel.js
src/frontend/src/Views/: FavouritesView.css  FavouritesView.js  LoginView.css  LoginView.js  ProductView.js  ProductViewDetail.js  RegisterView.js
src/frontend/static/css/: main.5f46bbdc.css  main.5f46bbdc.css.map
src/frontend/static/js/: main.4c237799.js  main.4c237799.js.map
src/scrapping_data/: scrapping_data.py
